--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 }
 
 
-@font-face {
+/* @font-face {
     font-family: 'MaaxMonoTrial';
-    src: url('/font/MaaxMonoTrial-Regular.otf') format('.otf');
+    src: url('/font/MaaxMonoTrial-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
@@ -31,11 +31,11 @@
     src: url('/font/MaaxMonoTrial-Italic.otf') format('.otf');
     font-weight: bold;
     font-style: italic;
-}
+} */
 
 body{
-	font-family: 'MaaxMonoTrial';
-    /* font-family: "IBM Plex Mono", monospace; */
+	/* font-family: 'MaaxMonoTrial'; */
+    font-family: "IBM Plex Mono", monospace;
 	margin: 5px;
     padding: 0px;
 
