--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body{
     padding: 0px;
 
 	font-size: 12px;
-    font-weight: normal;
+    font-weight: 300;
 	font-style: normal;
 	line-height: 1.5;
 	text-align: left;
