--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,14 @@
 *{
 	background-color: #d9d9d9;
-	/* font-family: 'MaaxMonoTrial';
-	src: url(font/MaaxMonoTrial-Regular.otf) format(.otf); */
-}
-
-
-@font-face {
-    font-family: 'MaaxMonoTrial';
-    src: url('/font/MaaxMonoTrial-Regular.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'MaaxMonoTrial';
-    src: url('/font/MaaxMonoTrial-BoldItalic.otf') format('.otf');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'MaaxMonoTrial';
-    src: url('/font/MaaxMonoTrial-BoldItalic.otf') format('.otf');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'MaaxMonoTrial';
-    src: url('/font/MaaxMonoTrial-Italic.otf') format('.otf');
-    font-weight: bold;
-    font-style: italic;
 }
 
 body{
-	font-family: 'MaaxMonoTrial';
-    /* font-family: "IBM Plex Mono", monospace; */
+    font-family: "IBM Plex Mono", monospace;
 	margin: 5px;
     padding: 0px;
 
 	font-size: 12px;
-    font-weight:  normal;
+    font-weight:  400;
 	font-style: normal;
 	line-height: 1.5;
 	text-align: left;
